Implement tags frontend

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -36,7 +36,7 @@
   --bs-primary: var(--primary);
   --bs-secondary: var(--traidic-a);
   --bs-primary-rgb: var(--primary-rgb);
-  --bs-secondary-rgb: var(--triadic-rgb);
+  --bs-secondary-rgb: var(--triadic-a-rgb);
 }
 
 body {
