Adopt web bff for project user creates

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -114,3 +114,11 @@ body {
   --bs-alert-border-color: var(--bs-danger);
   --bs-alert-link-color: var(--bs-danger);
 }
+
+.text-gray {
+  color: #424242 !important;
+}
+
+.text-gray-light {
+  color: #757575 !important;
+}
