--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -115,10 +115,25 @@ body {
   --bs-alert-link-color: var(--bs-danger);
 }
 
+.alert-info {
+  --bs-alert-color: var(--bs-dark);
+  --bs-alert-bg: var(--analagous-b);
+  --bs-alert-border-color: var(--bs-dark);
+  --bs-alert-link-color: var(--bs-dark);
+}
+
 .text-gray {
   color: #424242 !important;
 }
 
 .text-gray-light {
   color: #757575 !important;
+}
+
+.fs-7 {
+  font-size: 0.875rem;
+}
+
+.fs-8 {
+  font-size: 0.75rem;
 }
